@@ -35,6 +35,7 @@
 #define ZEO_ERR_RADIUS_MANY  "too many radii"
 
 #define ZEO_ERR_PH_INVALID_VERT_ID "%d: invalid identifier of a vertex specified."
+#define ZEO_ERR_PH_INV_FACE  "found %d invalid face keys"
 
 #define ZEO_ERR_LONGNAME     "too long name, truncated to %s"
 
@@ -110,6 +111,7 @@
 
 #define ZEO_WARN_PH_EMPTY         "empty set of vertices assigned for a polyhedron."
 #define ZEO_WARN_PH_VERT_UNMATCH  "%d: unmatched identifier of a vertex"
+#define ZEO_WARN_PH_DUPDEF        "duplicate definition of polyhedron, ignored"
 
 #define ZEO_WARN_STL_MIS_LOOP     "missing the initiator of outer loop"
 #define ZEO_WARN_STL_TOOMANYVERT  "too many vertices in an outer loop"
